Fixed Twich Video jumping when fading out/in.

--- a/frontend/src/components/twitch/Twitch.module.scss
+++ b/frontend/src/components/twitch/Twitch.module.scss
@@ -25,6 +25,7 @@
   margin: 7px;
   max-height: 336px;
   margin-bottom: 15px;
+  margin-top: 7px;
 }
 
 .date {
